--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.parisesoftware</artifactId>
+    <artifactId>bubblesort-efficiency</artifactId>
     <build>
         <plugins>
             <plugin>
@@ -17,7 +17,7 @@
             </plugin>
         </plugins>
     </build>
-    <groupId>bubblesort-efficiency</groupId>
+    <groupId>com.parisesoftware</groupId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Bubble Sort Efficiency Comparison</name>
     <description>Compares the Runtime Efficiency of Bubble Sort Algorithm Implementations</description>
